--- a/src/main/resources/pages/p/types.html
+++ b/src/main/resources/pages/p/types.html
@@ -237,7 +237,7 @@
         var page_content = "";//当前页内容
         $.each(blogs, function (index, val) {
             let blogUrl = "/p/blog.html?article=" + val.id;
-            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card  animated fadeInUp"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="' + blogUrl + '" target="_blank" class="m-black">'
+            page_content += '<div class="animated fadeInUp m-margin-bottom-small"><div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="' + blogUrl + '" target="_blank" class="m-black">'
                 + val.title
                 + '</a></h3><p class="m-text"><a href="' + blogUrl + '" data-pjax="" class="m-black">'
                 + val.description
@@ -253,7 +253,7 @@
                 + val.type.name
                 + '</a> </div></div></div> <div class="five wide column"><a href="' + blogUrl + '" target="_blank"> <img src="'
                 + val.firstPicture
-                + '" class="ui rounded image"></a></div></div></div>';
+                + '" class="ui rounded image"></a></div></div></div></div>';
         });
         $("#blogPage").html(page_content);
 
